# chess-game-backend-python-fastapi

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/api/: models.py
src/api/v1/: api.py  games.py  health.py  models.py
src/chess/: board.py  castling.py  fen.py  fen_state.py  game.py  game_model.py  moves.py  pieces.py  position.py  square.py
src/core/: config.py  exceptions.py  logging.py  models.py  shared_types.py
src/db/: database.py  repository.py  schema.py  sql_repository.py
src/services/: chess_service.py  game_service.py
tests/: conftest.py
tests/api/: test_models.py
tests/api/v1/: test_games.py  test_health.py  test_models.py
tests/chess/: test_board.py  test_castling.py  test_fen.py  test_fen_state.py  test_game.py  test_moves.py  test_pieces.py  test_position.py  test_square.py
tests/db/: test_sql_repository.py
tests/integration/: test_chess_games.py
tests/services/: test_chess_service.py
